@@ -12,6 +12,10 @@ git-annex (5.20140211) UNRELEASED; urgency=medium
     of annexed files within a view.
   * Add progress display for transfers to/from external special remotes.
   * unused: Fix to actually detect unused keys when in direct mode.
+  * fsck: When run with --all or --unused, while .gitattributes
+    annex.numcopies cannot be honored since it's operating on keys
+    instead of files, make it honor the global numcopies setting,
+    and the annex.numcopies git config setting.
   * Windows webapp: Can set up box.com, Amazon S3, and rsync.net remotes
   * Windows webapp: Can create repos on removable drives.
   * Windows: Ensure HOME is set, as needed by bundled cygwin utilities.
